# em-client-rust

./: Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  dependency-update.md  feature_request.md
.github/workflows/: ci.yml
em-cli/: Cargo.toml  README.md
em-cli/src/: main.rs
em-cli/tests/: config  create_build_test.sh
em-client/: Cargo.toml  README.md
em-client/src/: lib.rs  mimetypes.rs  models.rs
em-client/src/client/: mod.rs
em-node-agent-client/: Cargo.toml  README.md
em-node-agent-client/src/: lib.rs  mimetypes.rs  models.rs
em-node-agent-client/src/client/: mod.rs
