[package]
name = "em-cli"
version = "0.1.0"
authors = ["fortanix.com"]
license = "MPL-2.0"
edition = "2018"
description = "This crate provides a cli for Enclave Manager."
repository = "https://github.com/fortanix/em-client-rust"

[dependencies]
clap = "2.2.5"                                   # MIT
crypto-hash = "0.3"                              # MIT
lazy_static = "1"
serde_bytes = "0.11"
hyper-native-tls = "0.3"
serde_json = "1.0"
native-tls = "0.2.11"
sgx-isa = { version = "0.4" }
hyper = { version = "0.10", default-features = false }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.6.3", features = ["serde"] }
em-client = { version = "2.0.0", default-features = false, features = ["client"] }
b64-ct = "0.1.1"
