[package]
name = "em-client"
version = "4.0.1"
authors = ["Fortanix Inc."]
license = "MPL-2.0"
description = "This crate provides rust bindings for Enclave Manager API."
repository = "https://github.com/fortanix/em-client-rust"

[features]
default = ["client"]
client = ["serde_ignored", "hyper", "url"]

[dependencies]
base64 = "0.22"
bitflags = "1.2"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
lazy_static = "1.0"
log = "0.4.27"
mime = "0.2.6"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = {version = "0.6", features = ["serde", "v4"]}
hyper = {version = "0.10", default-features = false, optional = true}
serde_ignored = {version = "0.1.12", optional = true}
url = {version = "1.5", optional = true}
mbedtls = { version = ">=0.12.0, <0.14.0" }

[dev-dependencies]
clap = "2.25"
error-chain = "0.12"
