[package]
name = "em-node-agent-client"
version = "1.0.0"
authors = ["Fortanix Inc."]
license = "MPL-2.0"
description = "This crate provides rust bindings for Node Agent API."
repository = "https://github.com/fortanix/em-client-rust"

[features]
default = ["client"]
client = ["serde_ignored", "hyper", "url"]

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
lazy_static = "1.0"
log = "0.4.27"
mime = "0.3.17"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = {version = "0.6", features = ["serde", "v4"]}
hyper = {version = "0.10", default-features = false, optional = true}
serde_ignored = {version = "0.1.12", optional = true}
url = {version = "1.5", optional = true}

[dev-dependencies]
clap = "4.5"
error-chain = "0.12"
